Split approach + clean

--- a/calorie_prediction_notebook_xgboost_v1.ipynb
+++ b/calorie_prediction_notebook_xgboost_v1.ipynb
@@ -6,7 +6,8 @@
       "source": [
         "# Prédiction du niveau calorique des recettes avec apprentissage automatique\n",
         "\n",
-        "Ce notebook utilise un classifieur pour prédire le niveau calorique des recettes (BAS/MOYEN/HAUT) basé sur les ingrédients et instructions, avec préprocessing NLP et interprétation SHAP.\n",
+        "## XGBoost V1\n",
+        "Ce notebook utilise un classifieur pour prédire le niveau calorique des recettes (BAS/MOYEN/HAUT) basé sur les ingrédients et instructions, avec préprocessing NLP, XGBoost et interprétation SHAP.\n",
         "\n",
         "## Objectifs:\n",
         "- Classifier les recettes en 3 niveaux caloriques (bas < 250, moyen 250-500, haut > 500)\n",
@@ -208,7 +209,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -278,9 +279,7 @@
         "n, bins, patches = axes[0].hist(df['calories'], bins=50, alpha=0.9, \n",
         "                               edgecolor='white', linewidth=0.5)\n",
         "\n",
-        "# Appliquer un dégradé de couleurs\n",
         "for i, patch in enumerate(patches):\n",
-        "    # Créer un dégradé avec la couleur principale\n",
         "    base_color = np.array([255, 107, 157])  # #FF6B9D en RGB\n",
         "    intensity = 0.3 + 0.7 * (i / len(patches))\n",
         "    color = base_color * intensity / 255.0\n",
@@ -291,7 +290,7 @@
         "axes[0].set_xlabel('Calories', fontweight='bold', color='white', fontsize=12)\n",
         "axes[0].set_ylabel('Fréquence', fontweight='bold', color='white', fontsize=12)\n",
         "\n",
-        "# Lignes de seuil avec couleurs contrastantes\n",
+        "# Lignes de seuil\n",
         "axes[0].axvline(x=250, color='#FFD93D', linestyle='--', linewidth=3, \n",
         "               alpha=0.9, label=f'Seuil bas ({seuil_33})')\n",
         "axes[0].axvline(x=500, color='#4ECDC4', linestyle='--', linewidth=3, \n",
@@ -300,7 +299,7 @@
         "axes[0].tick_params(colors='white')\n",
         "axes[0].grid(True, alpha=0.3, color='#404040', linestyle='--')\n",
         "\n",
-        "# Légende harmonisée\n",
+        "# Légende\n",
         "legend = axes[0].legend(framealpha=0.9, facecolor='#2d2d2d', \n",
         "                       edgecolor='white', fontsize=11)\n",
         "for text in legend.get_texts():\n",
@@ -309,7 +308,7 @@
         "for spine in axes[0].spines.values():\n",
         "    spine.set_color('#404040')\n",
         "\n",
-        "# Distribution des niveaux caloriques avec palette harmonisée\n",
+        "# Distribution des niveaux caloriques\n",
         "axes[1].set_facecolor('#2d2d2d')\n",
         "\n",
         "calorie_counts = df['calorie_level'].value_counts()\n",
@@ -1173,7 +1172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1211,7 +1210,6 @@
         "plt.style.use('dark_background')\n",
         "import matplotlib.colors as mcolors\n",
         "\n",
-        "# Couleurs pour chaque classe\n",
         "class_colors = {'bas': '#4ECDC4', 'moyen': '#FECA57', 'haut': '#FF6B9D'}\n",
         "\n",
         "# Paires de features (compteur + ratio correspondant)\n",
@@ -1250,7 +1248,7 @@
         "    \n",
         "    # Subplot pour le compteur\n",
         "    ax1 = plt.subplot(2, 4, (row-1)*4 + col)\n",
-        "    ax1.set_facecolor('#3A3A3A')  # Fond moins noir pour les subplots\n",
+        "    ax1.set_facecolor('#3A3A3A')\n",
         "    sns.violinplot(data=df, x='calorie_level', y=count_feature, palette=class_colors, ax=ax1)\n",
         "    plt.title(f'{count_feature}', fontsize=14, fontweight='bold')\n",
         "    \n",
@@ -1263,7 +1261,7 @@
         "    \n",
         "    # Subplot pour le ratio correspondant\n",
         "    ax2 = plt.subplot(2, 4, (row-1)*4 + col + 1)\n",
-        "    ax2.set_facecolor('#3A3A3A')  # Fond moins noir pour les subplots\n",
+        "    ax2.set_facecolor('#3A3A3A')\n",
         "    sns.violinplot(data=df, x='calorie_level', y=ratio_feature, palette=class_colors, ax=ax2)\n",
         "    plt.title(f'{ratio_feature}', fontsize=14, fontweight='bold')\n",
         "    \n",
@@ -1274,7 +1272,7 @@
         "                fontweight='bold', color='black',\n",
         "                bbox=dict(boxstyle=\"round,pad=0.2\", facecolor='white', alpha=0.8))\n",
         "\n",
-        "# Titre mieux positionné\n",
+        "# Titre\n",
         "plt.suptitle('Distributions des Features les Plus Importantes', fontsize=16, fontweight='bold', y=0.98)\n",
         "plt.tight_layout()\n",
         "plt.subplots_adjust(top=0.92)\n",
@@ -1316,7 +1314,7 @@
         "# FIGURE 3: RÉCAPITULATIF COMPLET\n",
         "# ================================\n",
         "fig3 = plt.figure(figsize=(16, 10))\n",
-        "fig3.patch.set_facecolor('#2F2F2F')  # Fond moins noir\n",
+        "fig3.patch.set_facecolor('#2F2F2F')\n",
         "plt.axis('off')\n",
         "\n",
         "# Statistiques détaillées\n",
@@ -1470,7 +1468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1502,8 +1500,7 @@
         "    eval_metric='mlogloss',\n",
         "    verbosity=1,\n",
         "    tree_method='hist',\n",
-        "    # device='cuda', # Utilisation de la GPU (commenter si pas de GPU)\n",
-        "    # Paramètres\n",
+        "    # Hyperparamètres par défaut\n",
         "    learning_rate=0.1,\n",
         "    n_estimators=200,\n",
         "    max_depth=6,\n",
@@ -1525,6 +1522,7 @@
         "# Validation croisée stratifiée\n",
         "stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
         "\n",
+        "# Hyperparamètres à optimiser\n",
         "param_xgb_balanced = {\n",
         "    'n_estimators': [100, 200, 300],\n",
         "    'max_depth': [4, 6, 8],\n",
@@ -1662,7 +1660,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1721,21 +1719,20 @@
         "print(\"\\nRapport de classification (jeu de test):\")\n",
         "print(classification_report(y_test, y_pred_test, target_names=['bas', 'moyen', 'haut']))\n",
         "\n",
-        "# Matrice de confusion harmonisée\n",
+        "# Matrice de confusion\n",
         "fig, ax = plt.subplots(figsize=(12, 10))\n",
         "fig.patch.set_facecolor('#1a1a1a')\n",
         "ax.set_facecolor('#2d2d2d')\n",
         "\n",
         "cm = confusion_matrix(y_test, y_pred_test)\n",
         "\n",
-        "# Créer un heatmap personnalisé\n",
+        "# Créer un heatmap\n",
         "import matplotlib.colors as mcolors\n",
         "\n",
         "colors = ['#2d2d2d', '#45B7D1', '#4ECDC4', '#FF6B9D']\n",
         "n_bins = 100\n",
         "cmap = mcolors.LinearSegmentedColormap.from_list('custom', colors, N=n_bins)\n",
         "\n",
-        "# Heatmap avec style personnalisé\n",
         "im = ax.imshow(cm, interpolation='nearest', cmap=cmap, alpha=0.9)\n",
         "\n",
         "for i in range(cm.shape[0]):\n",
@@ -1784,7 +1781,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1880,14 +1877,13 @@
         "    'importance': feature_importance\n",
         "}).sort_values('importance', ascending=False)\n",
         "\n",
-        "# Graphique harmonisé\n",
+        "# Graphique\n",
         "fig, ax = plt.subplots(figsize=(14, 10))\n",
         "fig.patch.set_facecolor('#1a1a1a')\n",
         "ax.set_facecolor('#2d2d2d')\n",
         "\n",
         "top_features = importance_df.head(20)\n",
         "\n",
-        "# Palette de couleurs\n",
         "beautiful_colors = ['#FF6B9D', '#4ECDC4', '#45B7D1', '#96CEB4', '#FECA57', \n",
         "                   '#FF9FF3', '#54A0FF', '#5F27CD', '#A8E6CF', '#FFD93D']\n",
         "\n",
@@ -1903,7 +1899,6 @@
         "ax.set_title('Top 20 Features les Plus Importantes', \n",
         "             fontweight='bold', fontsize=18, color='white', pad=20)\n",
         "\n",
-        "# Ajouter les valeurs sur les barres\n",
         "for i, (bar, importance) in enumerate(zip(bars, top_features['importance'])):\n",
         "    ax.text(bar.get_width() + max(top_features['importance'])*0.01, \n",
         "            bar.get_y() + bar.get_height()/2, \n",
@@ -1949,7 +1944,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2041,7 +2036,6 @@
         "                  class_names=['bas', 'moyen', 'haut'], \n",
         "                  show=False)\n",
         "\n",
-        "# Styles harmonisés\n",
         "ax = plt.gca()\n",
         "ax.set_facecolor('#2d2d2d')\n",
         "ax.set_title('SHAP Bar Plot - Importance Moyenne des Features', \n",
@@ -2273,7 +2267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2294,7 +2288,6 @@
         "    # Graphique des probabilités (camembert)\n",
         "    ax1.set_facecolor('#2d2d2d')\n",
         "    \n",
-        "    # Couleurs spécifiques pour chaque catégorie\n",
         "    category_colors = {'bas': '#96CEB4', 'moyen': '#4ECDC4', 'haut': '#FF6B9D'}\n",
         "    colors = [category_colors[cat] for cat in prob_dict.keys()]\n",
         "    \n",
@@ -2608,7 +2601,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2625,16 +2618,16 @@
         "import joblib\n",
         "\n",
         "# Sauvegarder le modèle et le vectoriseur\n",
-        "joblib.dump(best_xgb, './model/calorie_prediction_model.pkl')\n",
-        "joblib.dump(tfidf, './model/tfidf_vectorizer.pkl')\n",
+        "joblib.dump(best_xgb, './models/calorie_prediction_model_v1.pkl')\n",
+        "joblib.dump(tfidf, './models/tfidf_vectorizer_v1.pkl')\n",
         "\n",
         "print(\"Modèle et vectoriseur sauvegardés!\")\n",
-        "print(\"- ./model/calorie_prediction_model.pkl\")\n",
-        "print(\"- ./model/tfidf_vectorizer.pkl\")\n",
+        "print(\"- ./models/calorie_prediction_model_v1.pkl\")\n",
+        "print(\"- ./models/tfidf_vectorizer_v1.pkl\")\n",
         "\n",
         "# Pour charger plus tard:\n",
-        "# loaded_model = joblib.load('./model/calorie_prediction_model.pkl')\n",
-        "# loaded_tfidf = joblib.load('./model/tfidf_vectorizer.pkl')"
+        "# loaded_model = joblib.load('./models/calorie_prediction_model_v1.pkl')\n",
+        "# loaded_tfidf = joblib.load('./models/tfidf_vectorizer_v1.pkl')"
       ]
     },
     {
